Project

General

Profile

Actions

Bug #45134

closed

rgw: dynamic resharding may process a manually resharded bucket with lower count

Added by Abhishek Lekshmanan about 4 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Tags:
reshard
Backport:
nautilus, octopus
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

A scenario that we can run into is that a bucket appears in the reshard list, but is manually resharded to higher count. However the next cycle of dynamic resharding picks up the bucket and reshards to the original count.

# radosgw-admin reshard list 
    {
        "time": "2020-04-17T15:02:39.002488Z",
        "tenant": "",
        "bucket_name": "bucket5",
        "bucket_id": "b695b662-4453-4c86-85c6-119bdbfe30ef.16309.4",
        "new_instance_id": "",
        "old_num_shards": 1,
        "new_num_shards": 31
    }
]

# radosgw-admin bucket reshard --bucket bucket5 --num-shards 103

(successful reshard)
# radosgw-admin reshard process 

Now we'll end up with the 31 shards again as the second process from the original queue still executes.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #45259: octopus: rgw: dynamic resharding may process a manually resharded bucket with lower count ResolvedNathan CutlerActions
Copied to rgw - Backport #45260: nautilus: rgw: dynamic resharding may process a manually resharded bucket with lower count ResolvedNathan CutlerActions
Actions #1

Updated by Abhishek Lekshmanan about 4 years ago

  • Description updated (diff)
Actions #2

Updated by Abhishek Lekshmanan about 4 years ago

  • Pull request ID set to 34614
Actions #3

Updated by Casey Bodley about 4 years ago

  • Status changed from In Progress to Pending Backport
  • Tags set to reshard
Actions #4

Updated by Nathan Cutler about 4 years ago

  • Backport changed from Nautilus, Octopus to nautilus, octopus
ERROR:root:https://tracker.ceph.com/issues/45134 requires backport to unknown release Nautilus
Actions #5

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #45259: octopus: rgw: dynamic resharding may process a manually resharded bucket with lower count added
Actions #6

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #45260: nautilus: rgw: dynamic resharding may process a manually resharded bucket with lower count added
Actions #7

Updated by Nathan Cutler about 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF